--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,24 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elenco dei documenti</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/540bdabfe2.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body>      
   <header>
-    <nav>
-      <ul>
-        <li>Pagina1</li>
-        <li>Pagina2</li>
-        <li>Pagina3</li>
-        <li>Pagina4</li>
-        <li>Pagina5</li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <div class="container-fluid" style="padding-left: 10px;">
+        <a class="navbar-brand"><img src="/logo_01.jpg" height="50"></a>
+        <button
+          class="navbar-toggler d-lg-none"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#collapsibleNavId"
+          aria-controls="collapsibleNavId"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavId">
+          <ul class="navbar-nav me-auto mt-2 mt-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" href="#" aria-current="page">Pagina1</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pagina2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pagina3</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pagina4</a>
+            </li>            
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
 
-  @RenderBody()
+  <div class="container-fluid" style="padding-left: 10px;">
+    <i class="fas fa-star"></i>
+    <i class="fas fa-star-half-alt"></i>
+    @RenderBody()
+  </div>
 
   <footer>
     <p>Contattaci al numero...</p>
   </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
