--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,14 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elenco dei documenti</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/540bdabfe2.js" crossorigin="anonymous"></script>
+  <environment exclude="Development">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/540bdabfe2.js" crossorigin="anonymous"></script>
+  </environment>
+  <environment include="Development">
+      <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css">
+  </environment>
 </head>
 <body>      
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid" style="padding-left: 10px;">
-        <a class="navbar-brand"><img src="/logo_01.jpg" height="50"></a>
+        <a class="navbar-brand"><img src="~/logo_01.jpg" height="50"></a>
         <button
           class="navbar-toggler d-lg-none"
           type="button"
@@ -26,17 +32,11 @@
         <div class="collapse navbar-collapse" id="collapsibleNavId">
           <ul class="navbar-nav me-auto mt-2 mt-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" href="#" aria-current="page">Pagina1</a>
+              <a class="nav-link active" asp-action="Index" asp-controller="Home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pagina2</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pagina3</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pagina4</a>
-            </li>            
+              <a class="nav-link" asp-action="Index" asp-controller="Courses">Catalogo corsi</a>
+            </li>         
           </ul>
         </div>
       </div>
@@ -52,6 +52,14 @@
   <footer>
     <p>Contattaci al numero...</p>
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <environment include="Development">
+      <script src="~/lib/jquery/dist/jquery.min.js"></script>
+      <script src="~/lib/popper/dist/umd/popper.min.js"></script>
+      <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
+  </environment>  
+  <environment exclude="Development">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </environment>
+  
 </body>
 </html>
