--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -2,7 +2,8 @@
 
 @for (int i = 1; i <= 10; i++)
 {
-  <div class="row">
+  <hr>
+  <div class="row course">
     <div class="col-md-1">
       <img src="~/logo_01.jpg" width="50">
     </div>
@@ -10,17 +11,17 @@
       <h2>Titolo del corso</h2>
       <author>di nome autore</author>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 rating">
       <i class="fas fa-star"></i>
       <i class="fas fa-star"></i>
       <i class="fas fa-star"></i>
       <i class="fas fa-star"></i>
       <i class="fas fa-star"></i>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 price">
       EUR 10,99<br /><s>12,99</s>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-2 d-flex align-items-center">
       <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="5">Dettaglio corso 5</a>
     </div>
   </div>
