Inserimento tipo Money e Currency

--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -1,6 +1,7 @@
+@model List<CourseViewModel>
 <h1>Catalogo dei corsi</h1>
 
-@for (int i = 1; i <= 10; i++)
+@foreach(CourseViewModel course in Model)
 {
   <hr>
   <div class="row course">
