--- a/Views/Courses/Detail.cshtml
+++ b/Views/Courses/Detail.cshtml
@@ -1,1 +1,26 @@
-<h1>Sono la view per l'action Detail del CoursesController</h1>
+<section class="course-info">
+  <div class="row">
+    <div class="col-md-9">
+      <h1>Titolo del corso</h1>
+    </div>
+    <div class="col-md-3 d-flex align-items-end">
+        <a href="#" class="btn btn-warning btn-lg btn-block subscribe-course">Iscriviti</a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-9">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi commodi blanditiis vero eveniet, fugit ducimus ad qui ab nulla, officia architecto id? Veniam incidunt voluptatibus voluptas pariatur rerum voluptates possimus!</p>
+      <p>Adipisci similique repellendus sunt atque ipsa nam repudiandae quia sint accusantium. Perferendis rerum rem sequi corporis, aliquam incidunt alias expedita nulla unde iure tenetur vel, temporibus molestiae aperiam tempora similique?</p>
+      <p>Nesciunt nam repudiandae dicta laborum dignissimos, accusamus placeat rem eveniet? Corporis possimus veniam magni? Saepe repudiandae tempora odit quasi qui dolorem enim quod tempore culpa sunt libero quis, adipisci expedita.</p>
+      <p>Labore id exercitationem, incidunt non accusantium autem, aut optio voluptates nisi odio fuga consequuntur quas ea vitae? Sint, culpa. Iure earum ad quos vel! Illum praesentium beatae eos nulla consequuntur?</p>
+      <p>Quis in mollitia perspiciatis eligendi nesciunt ipsum facilis, illum eos vel, quaerat eius! Aut, quis expedita impedit possimus explicabo quo beatae eos reiciendis aspernatur sed nam eligendi omnis facere laborum!</p>
+    </div>
+    <div class="col-md-3">
+
+    </div>
+  </div>
+</section>
+
+<section class="course-lessons">
+
+</section>
