--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -6,24 +6,38 @@
   <hr>
   <div class="row course">
     <div class="col-md-1">
-      <img src="~/logo_01.jpg" width="50">
+      <img src="@Url.Content(course.ImagePath)" width="50">
     </div>
     <div class="col-md-5">
-      <h2>Titolo del corso</h2>
-      <author>di nome autore</author>
+      <h2>@course.Title</h2>
+      <author>di @course.Author</author>
     </div>
-    <div class="col-md-2 rating">
-      <i class="fas fa-star"></i>
-      <i class="fas fa-star"></i>
-      <i class="fas fa-star"></i>
-      <i class="fas fa-star"></i>
-      <i class="fas fa-star"></i>
+    <div class="col-md-2 rating" title="@course.Rating">
+      @for(int i = 1; i <= 5; i++)
+      {
+        if (course.Rating >= i)
+        {
+          <i class="fas fa-star"></i>
+        }
+        else if (course.Rating > i - 1)
+        {
+          <i class="fas fa-star-half-alt"></i>
+        }
+        else
+        {
+          <i class="far fa-star"></i>
+        }
+      }
     </div>
     <div class="col-md-2 price">
-      EUR 10,99<br /><s>12,99</s>
+      @course.CurrentPrice
+      @if(!course.CurrentPrice.Equals(course.FullPrice))
+      {
+        <br /><s>@course.FullPrice</s>
+      }
     </div>
     <div class="col-md-2 d-flex align-items-center">
-      <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="5">Dettaglio corso 5</a>
+      <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
     </div>
   </div>
 }
