--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -16,6 +16,15 @@
     </div>
 </div>
 
+@* <div class="row">
+  <div class="col-md-1"></div>
+  <div class="col-md-5"><a asp-route-orderby="Title" app-route-ascending="true">Titolo</a></div>
+  <div class="col-md-2"><a asp-route-orderby="Rating" app-route-ascending="true">Valutazione</a></div>
+  <div class="col-md-2"><a asp-route-orderby="CurrentPrice" app-route-ascending="true">Prezzo</a></div>
+  <div class="col-md-2"></div>
+</div> *@
+
+
 @foreach(CourseViewModel course in Model)
 {
   <hr>
@@ -57,3 +66,26 @@
   </div>
 }
 
+<nav aria-label="Page navigation">
+  <ul class="pagination d-flex justify-content-center mt-3">
+    @* <li class="page-item disabled">
+      <a class="page-link" href="#" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li> *@
+    <li class="page-item active" aria-current="page">
+      <a class="page-link" asp-route-page="1">1</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" asp-route-page="2">2</a>
+    </li>
+    <li class="page-item">
+      <a class="page-link" asp-route-page="3">3</a>
+    </li>
+    @* <li class="page-item">
+      <a class="page-link" href="#" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li> *@
+  </ul>
+</nav>
