--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -16,13 +16,13 @@
     </div>
 </div>
 
-@* <div class="row">
+<div class="row">
   <div class="col-md-1"></div>
-  <div class="col-md-5"><a asp-route-orderby="Title" app-route-ascending="true">Titolo</a></div>
-  <div class="col-md-2"><a asp-route-orderby="Rating" app-route-ascending="true">Valutazione</a></div>
-  <div class="col-md-2"><a asp-route-orderby="CurrentPrice" app-route-ascending="true">Prezzo</a></div>
+  <div class="col-md-5"><a asp-route-orderby="Title" asp-route-ascending="true">Titolo</a></div>
+  <div class="col-md-2"><a asp-route-orderby="Rating" asp-route-ascending="true">Valutazione</a></div>
+  <div class="col-md-2"><a asp-route-orderby="CurrentPrice" asp-route-ascending="true">Prezzo</a></div>
   <div class="col-md-2"></div>
-</div> *@
+</div>
 
 
 @foreach(CourseViewModel course in Model)
