--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -1,17 +1,3 @@
-html, body {
-    min-height: 100vh;
-}
-body {
-    display: flex;
-    flex-direction: column;
-}
-body>.container {
-    flex: 1;
-}
-body>footer {
-    background-color: #f5f5f5;
-}
-
 h1 {
     margin-top: 0.7em;
     margin-bottom: 0.7em;
@@ -59,7 +45,7 @@ h2 {
 .course-info {
     margin-bottom: 2em;
 }
-.course-info aside, .lesson-info aside {
+.course-info aside {
     background-color: #f5f5f5;
     padding: 1em;
     height: 100%;
@@ -94,55 +80,4 @@ section+section {
 }
 .jumbotron h1 {
     font-size: 3.5rem;
-}
-.field-validation-error {
-    color:red;
-}
-.validation-summary-errors ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    margin-bottom: 1em;
-}
-
-.validation-summary-errors li {
-    color: darkred;
-    border-left: 3px solid red;
-    padding-left: 10px;
-    padding-top: 3px;
-    padding-bottom: 3px;
-    background-color: rgba(255, 0, 0, 0.05);
-    margin-bottom: 2px;
-}
-
-.video-container {
-    position: relative;
-    padding-top: 56.25%;
-    display: block;
-}
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 0;
-}
-/* Icona per l'input type="file" */
-.custom-file-label::after {
-    content: '\f07c' !important;
-    font-family: 'Font Awesome 5 Free';
-}
-.preview-container {
-    padding-top: 100%;
-    position: relative;
-}
-.preview-container img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: top left;
 }
