Abbiamo realizzato una partial view per incapsulare la riga html di un singolo corso, richiamata dagli elenchi nella home e dalla lista del catalogo

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,25 +13,7 @@
   <h2>Aggiunti di recente</h2>
   @foreach (var course in Model.MostRecentCourses)
   {
-    <hr>
-    <div class="row course">
-      <div class="col-md-1">
-        <img src="@Url.Content(course.ImagePath)" width="50">
-      </div>
-      <div class="col-md-5">
-        <h2>@course.Title</h2>
-        <author>di @course.Author</author>
-      </div>
-      <div class="col-md-2 rating" title="@course.Rating">
-        <rating value="@course.Rating"></rating>
-      </div>
-      <div class="col-md-2 price">
-        <price current-price="@course.CurrentPrice" full-price="@course.FullPrice"></price>
-      </div>
-      <div class="col-md-2 d-flex align-items-center">
-        <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
-      </div>
-    </div>
+    <partial name="Courses/_CourseLine" model="@course"></partial>
   }
 </section>
 
@@ -39,24 +21,6 @@
   <h2>I migliori di sempre</h2>
   @foreach (var course in Model.BestRatingCourses)
   {
-    <hr>
-    <div class="row course">
-      <div class="col-md-1">
-        <img src="@Url.Content(course.ImagePath)" width="50">
-      </div>
-      <div class="col-md-5">
-        <h2>@course.Title</h2>
-        <author>di @course.Author</author>
-      </div>
-      <div class="col-md-2 rating" title="@course.Rating">
-        <rating value="@course.Rating"></rating>
-      </div>
-      <div class="col-md-2 price">
-        <price current-price="@course.CurrentPrice" full-price="@course.FullPrice"></price>
-      </div>
-      <div class="col-md-2 d-flex align-items-center">
-        <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="@course.Id">Dettaglio</a>
-      </div>
-    </div>
+    <partial name="Courses/_CourseLine" model="@course"></partial>
   }
 </section>
