--- a/Views/Shared/Courses/_CourseLine.cshtml
+++ b/Views/Shared/Courses/_CourseLine.cshtml
@@ -15,6 +15,6 @@
     <price current-price="@Model.CurrentPrice" full-price="@Model.FullPrice"></price>
   </div>
   <div class="col-md-2 d-flex align-items-center">
-    <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="@Model.Id">Dettaglio</a>
+    <a class="btn btn-outline-primary" asp-controller="Courses" asp-action="Detail" asp-route-id="@Model.Id">Dettaglio</a>
   </div>
 </div>
