E' stato creata la view e la gestione per la creazione di un nuovo corso, inoltre è stato creato per la versione SQL.ADO il metodo per creare un nuovo corso

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
     </nav>
   </header>
 
-  <div class="container-fluid" style="padding-left: 10px;">
+  <div class="container" style="padding-left: 10px;">
     @RenderBody()
   </div>
 
