--- a/Views/Courses/Index.cshtml
+++ b/Views/Courses/Index.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-8">
-        <h1>@ViewData["Title"]</h1>
+        <h1>@ViewData["Title"] <a class="btn btn-outline-primary btn-sm" asp-action="Create"><i class="fas fa-plus"></i> Crea nuovo</a></h1>
     </div>
     <div class="col-md-4 d-flex align-items-center">
         <form asp-controller="Courses" asp-action="Index" method="get">
