--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -63,5 +63,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </environment>
   
+  <!-- in questo modo indico che, non in maniera obbligatoria, qui può intervenire una partial per eseguire altro codice (per esempio usato in Create.cshtml) -->
+  @RenderSection("Scripts", required: false)
 </body>
 </html>
