--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,6 +47,12 @@
   </header>
 
   <div class="container" style="padding-left: 10px;">
+    @if (TempData["ConfirmationMessage"] != null)
+    {
+      <div class="alert alert-success alert-dismissable mt-3" role="alert">
+        @TempData["ConfirmationMessage"]
+      </div>
+    }
     @RenderBody()
   </div>
 
