Aggiornamento in textarea stile word nel form di modifica corso

--- a/Views/Courses/Edit.cshtml
+++ b/Views/Courses/Edit.cshtml
@@ -73,9 +73,9 @@
 @section Scripts
 {
     <partial name="_Validation"></partial>
-    @* <partial name="_Summernote"></partial>
+    <partial name="_Summernote"></partial>
 
-    <script>
+    @* <script>
         function updatePreview(inputFile) {
             var reader = new FileReader();
             reader.onload = function (e) {
