--- a/Views/Courses/Detail.cshtml
+++ b/Views/Courses/Detail.cshtml
@@ -10,7 +10,9 @@
   </div>
   <div class="row">
     <div class="col-md-9">
-      <p>@Model.Description</p>
+      @* Html.Raw serve a non applicare HTML encoding, però noi sanitizziamo usando un tag helper *@
+      @* <p>@Html.Raw(Model.Description)</p> *@
+      <p html-sanitize>@Model.Description</p>
     </div>
     <div class="col-md-3">
       <aside>
